--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -1,19 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% if title %}
-        <title>Flask_daehan   {{title}} </title>
-    {% else %}
-        <title>Flask_daehan</title>
-    {% endif %}
-</head>
-<body>
+{% extends "layout.html" %}
+{% block content %}
     {% for post in posts %}
         <h2>{{ post.title }}</h2>
         <p>By {{ post.author }} on {{ post.date }}</p>
         <p>{{ post.content }}</p>
     {% endfor %}
-
-</body>
-</html>
+{% endblock content %}
