--- a/flask/templates/register.html
+++ b/flask/templates/register.html
@@ -1,3 +1,4 @@
+<!-- ##  -->
 {% extends "layout.html" %}
 {% block content %}
     <div class=""content-section">
@@ -6,7 +7,7 @@
             <fieldset class="form-group">
                 <legend class=""border-bottom mb-4>Join Today</legend>
                 <div class="form-group">
-                    {{ form.username.label(class ="form-control-label") }}
+                    {{ form.username.label(class ="form-control-label") }}        <!-- ##  라벨 -->
                     {% if form.username.errors %}
                         {{ form.username(class ="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback">
@@ -15,7 +16,7 @@
                             {% endfor %}
                         </div>
                     {% else %}
-                        {{ form.username(class ="form-control form-control-lg") }}
+                        {{ form.username(class ="form-control form-control-lg") }}   <!-- ## box  -->
                     {% endif %}
                 </div>
                 <div class="form-group">
@@ -69,3 +70,6 @@
         </small>
     </div>
 {% endblock content %}
+
+
+<!-- 실수 - 닉네임, 메일, 비번, 비번확인 넣어야하는데 닉네임 칸 제외시킴 -> submit 이 정보가 다 들어오지 않아 아이디 등록이 안돼서 다음으로 못 넘어감  -->
