--- a/flask/flaskblog/templates/layout.html
+++ b/flask/flaskblog/templates/layout.html
@@ -28,8 +28,13 @@
                     </div>
             <!-- Navbar Right Side -->
                     <div class="navbar-nav">
-                        <a class="nav-item nav-link" href="/login">Login</a>
-                        <a class="nav-item nav-link" href="/register">Register</a>
+                        {% if current_user.is_authenticated %}                        <!-- 로그인 상태이면  longin,rester탭 안보임-->
+                        <a class="nav-item nav-link" href="/account">Account</a>
+                        <a class="nav-item nav-link" href="/logout">Logout</a>
+                        {% else %}
+                            <a class="nav-item nav-link" href="/login">Login</a>
+                            <a class="nav-item nav-link" href="/register">Register</a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
