update, profile_pic

--- a/flask/flaskblog/templates/layout.html
+++ b/flask/flaskblog/templates/layout.html
@@ -25,6 +25,8 @@
                     <div class="navbar-nav mr-auto">
                         <a class="nav-item nav-link" href="{{url_for('home')}}">Home</a>
                         <a class="nav-item nav-link" href="/about">About</a>
+                        <a class="nav-item nav-link" href="/patent">Patent</a>
+                        <a class="nav-item nav-link" href="/about">News</a> <!-- 특정 기술 관련 특허 뉴스-->
                     </div>
             <!-- Navbar Right Side -->
                     <div class="navbar-nav">
