--- a/flask/flaskblog/templates/layout.html
+++ b/flask/flaskblog/templates/layout.html
@@ -31,6 +31,7 @@
             <!-- Navbar Right Side -->
                     <div class="navbar-nav">
                         {% if current_user.is_authenticated %}                        <!-- 로그인 상태이면  longin,rester탭 안보임-->
+                        <a class="nav-item nav-link" href="/post/new">New Post</a>
                         <a class="nav-item nav-link" href="/account">Account</a>
                         <a class="nav-item nav-link" href="/logout">Logout</a>
                         {% else %}
