--- a/flask/flaskblog/templates/home.html
+++ b/flask/flaskblog/templates/home.html
@@ -8,7 +8,7 @@
                     <a class="mr-2" href="#">{{ post.author.username }}</a> <!-- mr = margin right 2 -->
                     <small class="text-muted">{{ post.date.strftime('%Y-%m-%d') }}</small>  <!-- # 연월일 만 display -->
                 </div>
-                <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+                <h2><a class="article-title" href="{{ url_for('post', post_id=post.id)  }}">{{ post.title }}</a></h2>   <!-- # 이동 x  // 타이틀을 클릭하면 그 post.id로 이동-->
                 <p class="article-content">{{ post.content }}</p>
             </div>
         </article>
