--- a/flask/flaskblog/templates/home.html
+++ b/flask/flaskblog/templates/home.html
@@ -13,9 +13,13 @@
             </div>
         </article>
     {% endfor %}
-    {% for page_num in posts.iter_pages() %}  <!-- iter 을 넣어서 페이지를 이전,다음으로 이동하는 기준 가짐   -->
+    {% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}  <!-- iter 을 넣어서 페이지를 이전,다음으로 이동하는 기준 가짐   -->
         {% if page_num %}
-            <a class="btn btn-outline-info mb-4" href="{{ url_for('home', page=page_num) }}"> {{ page_num }} </a>
+            {% if posts.page == page_num %}    <!-- 내가 그 페이지 있을때는 파란색 채우기 버튼 -->
+                <a class="btn btn-info mb-4" href="{{ url_for('home', page=page_num) }}"> {{ page_num }} </a> <!-- 페이지 리스트 목록(post) -->
+            {% else  %}   <!-- 테두리만 -->
+                <a class="btn btn-outline-info mb-4" href="{{ url_for('home', page=page_num) }}"> {{ page_num }} </a> <!-- 페이지 리스트 목록(post) -->
+            {% endif %}
         {% else  %}
             ...
         {% endif %}
