--- a/flask/flaskblog/templates/home.html
+++ b/flask/flaskblog/templates/home.html
@@ -5,10 +5,10 @@
             <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + post.author.image_file) }}">  <!--# 원래 있던 스타일에서 저장된 사진 -->
             <div class="media-body">
                 <div class="article-metadata">
-                    <a class="mr-2" href="#">{{ post.author.username }}</a> <!-- mr = margin right 2 -->
+                    <a class="mr-2" href="{{ url_for('user_posts', username=post.author.username )}}">{{ post.author.username }}</a> <!-- mr = margin right 2 -->
                     <small class="text-muted">{{ post.date.strftime('%Y-%m-%d') }}</small>  <!-- # 연월일 만 display -->
                 </div>
-                <h2><a class="article-title" href="{{ url_for('post', post_id=post.id)  }}">{{ post.title }}</a></h2>   <!-- # 이동 x  // 타이틀을 클릭하면 그 post.id로 이동-->
+                <h2><a class="article-title" href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a></h2>   <!-- # 이동 x  // 타이틀을 클릭하면 그 post.id로 이동-->
                 <p class="article-content">{{ post.content }}</p>
             </div>
         </article>
