--- a/flask/flaskblog/templates/post.html
+++ b/flask/flaskblog/templates/post.html
@@ -4,7 +4,7 @@
         <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + post.author.image_file) }}">  <!--# 원래 있던 스타일에서 저장된 사진 -->
         <div class="media-body">
             <div class="article-metadata">
-                <a class="mr-2" href="#">{{ post.author.username }}</a> <!-- mr = margin right 2 -->
+                <a class="mr-2" href="{{ url_for('user_posts', username=post.author.username )}}">{{ post.author.username }}</a> <!-- mr = margin right 2 -->
                 <small class="text-muted">{{ post.date.strftime('%Y-%m-%d') }}</small>  <!-- # 연월일 만 display -->
                 {% if post.author == current_user %}
                     <div>
