--- a/flask/flaskblog/templates/about.html
+++ b/flask/flaskblog/templates/about.html
@@ -1,5 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h2>about</h2>
-    <p>How are you doing today? If you have any questions, feel free to ask here.</p>
+    <h2>Services</h2>
+    <p>1. 특허 검색</p>
+    <p>2. 특허 뉴스</p>
+    <p>3. 경쟁사의 특허 동향</p>
+    <p>4. 키워드 제안</p>
 {% endblock content %}
