--- a/flask/flaskblog/templates/layout_pat.html
+++ b/flask/flaskblog/templates/layout_pat.html
@@ -27,7 +27,7 @@
                         <a class="nav-item nav-link" href="{{url_for('main.home')}}">Home</a>
                         <a class="nav-item nav-link" href="{{url_for('main.about')}}">About</a>
                         <a class="nav-item nav-link" href="{{url_for('main.patent')}}">Patent</a>
-                        <a class="nav-item nav-link" href="{{url_for('main.news')}}">News</a> <!-- 특정 기술 관련 특허 뉴스-->
+                        <a class="nav-item nav-link" href="/about">News</a> <!-- 특정 기술 관련 특허 뉴스-->
                     </div>
             <!-- Navbar Right Side -->
                     <div class="navbar-nav">
@@ -45,33 +45,7 @@
         </nav>
     </header>
     <main role="main" class="container">
-        <div class="row">
-            <div class="col-md-8">
-                {% with messages = get_flashed_messages(with_categories=true) %}
-                    {% if messages %}
-                        {% for category, message in messages %}
-                            <div class="alert alert-{{ category }}">
-                                {{ message }}
-                            </div>
-                        {% endfor %}
-                    {% endif %}
-                {% endwith %}
-                {% block content %}{% endblock %}
-            </div>
-            <div class="col-md-4">
-                <div class="content-section">
-                    <h3>Our Sidebar</h3>
-                    <p class='text-muted'>You can put any information here you'd like.
-                        <ul class="list-group">
-                            <li class="list-group-item list-group-item-light">Latest Posts</li>
-                            <li class="list-group-item list-group-item-light">Announcements</li>
-                            <li class="list-group-item list-group-item-light">Patents</li>
-                            <li class="list-group-item list-group-item-light">Etc</li>
-                        </ul>
-                    </p>
-                </div>
-            </div>
-        </div>
+        {% block content %}{% endblock %}
     </main>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
