--- a/flask/flaskblog/templates/patent.html
+++ b/flask/flaskblog/templates/patent.html
@@ -1,10 +1,10 @@
-{% extends "layout.html" %}
+{% extends "layout_pat.html" %}
 {% block content %}
 <div class="jumbotron">
     <div class="container">
       <h1 class="display-3">Hello, patent!</h1>
       <p>The new patent for today</p>
-      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+      <p><a class="btn btn-primary btn-lg" href="{{ url_for('users.patent_reg')}}" role="button">관심 특허 등록</a></p>
     </div>
   </div>
 
