--- a/elasticsearch/templates/es_home.html
+++ b/elasticsearch/templates/es_home.html
@@ -5,18 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-<p>test es</p>
-<form action="" method="post">
-    {{ form.da1(placeholder="Title", rows="1") }}
-    {{ form.da2(placeholder="Professor", rows="1") }}
-    {{ form.da3(placeholder="Major", rows="1") }}
-    {{ form.da4(placeholder="Semester", rows="1") }}
-    {{ form.da5(placeholder="Student_count", rows="1") }}
-    {{ form.da6(placeholder="Unit", rows="1") }}
-    {{ form.da7(placeholder="Rating", rows="1") }}
-    <input type="submit" value="register">
+<p>Index=patent</p>
 
-    {{ result }}
-</form>
+<p></p>
+{% for i in range(n) %}
+{{ data[i] }}
+<p></p>
+{% endfor %}
 </body>
 </html>
