--- a/elasticsearch/templates/es_home.html
+++ b/elasticsearch/templates/es_home.html
@@ -6,11 +6,12 @@
 </head>
 <body>
 <p>Index=patent</p>
-
 <p></p>
+{% if data: %}
 {% for i in range(n) %}
 {{ data[i] }}
 <p></p>
 {% endfor %}
+{% else %}{% endif %}
 </body>
 </html>
