--- a/elasticsearch/templates/es_index.html
+++ b/elasticsearch/templates/es_index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<p>Index=patent</p>
+<a href="/">Home</a>
 <p></p>
 {% if data: %}
 {% for i in range(n) %}
