--- a/elasticsearch/es/templates/es_home.html
+++ b/elasticsearch/es/templates/es_home.html
@@ -5,11 +5,13 @@
     <title>Title</title>
 </head>
 <body>
-<a href="/">Home</a>
+<p>Home</p>
+<a href="/register">Register</a>
 <p></p>
 {% if data: %}
 {% for i in range(n) %}
-{{ data[i] }}
+<a href="/index/{{data[i]}}/size/10">{{ data[i] }}</a>
+<a href="/search/{{data[i]}}">{{ data[i] }}_search</a>
 <p></p>
 {% endfor %}
 {% else %}{% endif %}
