--- a/elasticsearch/es/templates/es_index.html
+++ b/elasticsearch/es/templates/es_index.html
@@ -1,16 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<a href="/">Home</a>
-    <form method="POST" action="">
-    <p>Type the name of the index and Click the button if you want to delete the index</p>
-    {{ form.index(class="form-control") }}
-    <input class="login__button login__button--submit _loginSubmitButton" type="submit" value="Delete this index">
-    </form>
           {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
               {% for category, message in messages %}
@@ -20,12 +7,109 @@
               {% endfor %}
             {% endif %}
           {% endwith %}
-<p></p>
-{% if data: %}
-{% for i in range(n) %}
-{{ data[i] }}
-<p></p>
-{% endfor %}
-{% else %}{% endif %}
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A layout example that shows off a responsive email layout.">
+    <title> {{ index }}</title>
+
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
+        <!--[if lte IE 8]>
+            <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='email-old-ie.css') }}">
+        <![endif]-->
+        <!--[if gt IE 8]><!-->
+            <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='email.css') }}">
+        <!--<![endif]-->
+</head>
+<body>
+
+<div id="layout" class="content pure-g">
+    <div id="nav" class="pure-u">
+        <a href="#" class="nav-menu-button">Menu</a>
+
+        <div class="nav-inner">
+            <a class="primary-button pure-button" href="/">Home</a>
+                       <div class="pure-menu">
+                <ul class="pure-menu-list">
+                    <li class="pure-menu-item"><a href="#" class="pure-menu-link"> {{ index }}</a></li>
+                    <li class="pure-menu-heading">    --------- </li>
+                    <li class="pure-menu-item"><a href="{{url_for('elastic.register')}}" class="pure-menu-link"><span class="email-label-personal"></span>Register</a></li>
+                    <li class="pure-menu-item"><a href="/country/{{index}}" class="pure-menu-link"><span class="email-label-work"></span>Country</a></li>
+                    <li class="pure-menu-item"><a href="/search/{{index}}" class="pure-menu-link"><span class="email-label-travel"></span>Search</a></li>
+                     <form method="POST" action="">
+                        <input class="primary-button pure-button" type="submit" value="Delete index">
+                    </form>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div id="list" class="pure-u-1">
+        {% if data: %}
+        {% for i in range(n) %}
+        <div class="email-item email-item-selected pure-g">
+
+            <div class="pure-u-3-4">
+                <h5 class="email-name">{{ data[i]['_source']['국가코드'] }}</h5>
+                <h4 class="email-subject">{{ data[i]['_source']['출원번호'] }}</h4>
+                <p class="email-desc">
+                    {{ data[i]['_source']['발명의 명칭'] }}
+                </p>
+            </div>
+        </div>
+        {% endfor %}
+        {% else %}{% endif %}
+    </div>
+        {% if data: %}
+        {% for i in range(n) %}
+
+    <div id="main" class="pure-u-1">
+            <div class="email-content">
+                <div class="email-content-header pure-g">
+                    <div class="pure-u-1-2">
+                        <h1 class="email-content-title">{{ data[i]['_source']['발명의 명칭'] }}</h1>
+                        <p class="email-content-subtitle">
+                            출원번호 : <a>{{ data[i]['_source']['출원번호'] }}</a> 출원일 <span>{{ data[i]['_source']['출원일'] }}</span>
+                        </p>
+                    </div>
+
+                    <div class="email-content-controls pure-u-1-2">
+                        <button class="secondary-button pure-button">{{ data[i]['_source']['국가코드'] }}</button>
+                        <button class="secondary-button pure-button">Forward</button>
+                        <button class="secondary-button pure-button">Move to</button>
+                    </div>
+                </div>
+
+                <div class="email-content-body">
+                    <p>
+                        {{ data[i]['_source']['요약'] }}
+                    </p>
+                </div>
+            </div>
+            {% endfor %}
+            {% else %}{% endif %}
+    </div>
+
+</div>
+
+<script src="https://yui-s.yahooapis.com/3.18.1/build/yui/yui-min.js"></script>
+<script>
+    YUI().use('node-base', 'node-event-delegate', function (Y) {
+
+        var menuButton = Y.one('.nav-menu-button'),
+            nav        = Y.one('#nav');
+
+        // Setting the active class name expands the menu vertically on small screens.
+        menuButton.on('click', function (e) {
+            nav.toggleClass('active');
+        });
+
+        // Your application code goes here...
+
+    });
+</script>
+
 </body>
 </html>
