--- a/elasticsearch/es/templates/es_index.html
+++ b/elasticsearch/es/templates/es_index.html
@@ -1,12 +1,3 @@
-          {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-              {% for category, message in messages %}
-                <div class="alert alert-{{ category }}">
-                  {{ message }}
-                </div>
-              {% endfor %}
-            {% endif %}
-          {% endwith %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -35,7 +26,7 @@
                 <ul class="pure-menu-list">
                     <li class="pure-menu-item"><a href="#" class="pure-menu-link"> {{ index }}</a></li>
                     <li class="pure-menu-heading">    --------- </li>
-                    <li class="pure-menu-item"><a href="{{url_for('elastic.register')}}" class="pure-menu-link"><span class="email-label-personal"></span>Register</a></li>
+                    <li class="pure-menu-item"><a href="/index/register" class="pure-menu-link"><span class="email-label-personal"></span>Register</a></li>
                     <li class="pure-menu-item"><a href="/country/{{index}}" class="pure-menu-link"><span class="email-label-work"></span>Country</a></li>
                     <li class="pure-menu-item"><a href="/search/{{index}}" class="pure-menu-link"><span class="email-label-travel"></span>Search</a></li>
                      <form method="POST" action="">
@@ -92,6 +83,15 @@
             {% else %}{% endif %}
     </div>
 
+          {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+              {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">
+                  {{ message }}
+                </div>
+              {% endfor %}
+            {% endif %}
+          {% endwith %}
 </div>
 
 <script src="https://yui-s.yahooapis.com/3.18.1/build/yui/yui-min.js"></script>
