--- a/elasticsearch/es/static/marketing-old-ie.css
+++ b/elasticsearch/es/static/marketing-old-ie.css
@@ -140,7 +140,8 @@ a.pure-button-primary {
     overflow: hidden;
     /* The following styles are required for the "scroll-over" effect */
     width: 100%;
-    height: 88%;
+    height: 65%;
+    margin-top: 0.5em;
     top: 0;
     left: 0;
     position: fixed !important;
@@ -167,7 +168,7 @@ a.pure-button-primary {
     font-weight: bold;
     color: white;
     border: 3px solid white;
-    padding: 1em 1.6em;
+    padding: 0.5em 0.8em;
     font-weight: 100;
     border-radius: 5px;
     line-height: 1em;
