--- a/elasticsearch/es/templates/es_index_country.html
+++ b/elasticsearch/es/templates/es_index_country.html
@@ -1,40 +1,41 @@
 <html>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Country_count</title>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.8/socket.io.min.js"></script>
-
+<script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+        <script type="text/javascript" charset="utf-8">
+            var socket;
+            $(document).ready(function(){
+                socket = io.connect('http://' + document.domain + ':' + location.port + '/chat');
+                socket.on('connect', function() {
+                    socket.emit('joined', {});
+                });
+                socket.on('status', function(data) {
+                    $('#chat').val($('#chat').val() + '<' + data.msg + '>\n');
+                    $('#chat').scrollTop($('#chat')[0].scrollHeight);
+                });
+                socket.on('message', function(data) {
+                    $('#chat').val($('#chat').val() + data.msg + '\n');
+                    $('#chat').scrollTop($('#chat')[0].scrollHeight);
+                });
+                $('#text').keypress(function(e) {
+                    var code = e.keyCode || e.which;
+                    if (code == 13) {
+                        text = $('#text').val();
+                        $('#text').val('');
+                        socket.emit('text', {msg: text});
+                    }
+                });
+            });
+            function leave_room() {
+                socket.emit('left', {}, function() {
+                    socket.disconnect();
+                    // go back to the login page
+                    window.location.href = "{{ url_for('elastic.room') }}";
+                });
+            }
+        </script>
 <body>
-    <script type="text/javascript">
-        $(document).ready(function(){
-            var sock = io.connect('http://127.0.0.1:9999');
-            sock.on('connect', function(){
-                var connect_string = 'new_connect';
-                sock.send(connect_string);
-            });
-
-            sock.on('hello', function(msg){
-                $('#messages').append('<li>' +'>>Hello :'+ msg + '</li>');
-                console.log('Received Hello Message');
-            });
-
-            sock.on('message', function(msg){
-                // console.log(type(msg));
-                if(msg.type === 'normal'){
-                    $('#messages').append('>> '+msg.message+'<br>');
-                }else{
-                    $('#messages').append('<li>' + msg.message + '</li>');
-                }
-                console.log('Received Message : '+msg.type);
-            });
-
-            $('#sendbutton').on('click', function(){
-                sock.send($('#myMessage').val());
-                $('#myMessage').val('');
-            });
-        });
-
-</script>
 
 <div>
 <p> 현재 접속자
@@ -111,6 +112,9 @@ svg.append("text")
 
 
 </script>
-
+    <h1>Chat: {{ index }}</h1>
+    <textarea id="chat" cols="80" rows="20"></textarea><br><br>
+    <input id="text" size="80" placeholder="Enter your message here"><br><br>
+    <a href="#" onclick="leave_room();">Leave this room</a>
 </body>
 </html>
